<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/13
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/dividerColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_14">

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/thank_you_for_booking"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:text="@string/driver_will_confirm"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_normal" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/define_dimen_2"
            android:text="@string/check_status_your_booking"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:orientation="horizontal">

            <com.user.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_in"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_normal" />

            <com.user.etow.ui.widget.textview.TahomaRegularTextView
                android:id="@+id/tv_upcoming_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/define_dimen_5"
                android:text="@string/upcoming_trips"
                android:paddingTop="@dimen/define_dimen_2"
                android:paddingBottom="@dimen/define_dimen_2"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:background="@drawable/bg_grey_corner_8"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_14">

            <com.user.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_any_assistance"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:id="@+id/img_call_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/define_dimen_10"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:src="@drawable/ic_call_us_black" />

            <com.user.etow.ui.widget.textview.TahomaRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_us"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_understand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/define_dimen_10"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:background="@drawable/bg_black_corner"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_14"
            android:paddingTop="@dimen/define_dimen_14"
            android:text="@string/i_understand"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</LinearLayout>
