<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/20
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_20">

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xnormal"
        android:textStyle="bold" />

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:text="@string/message_turn_on_gps"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/define_dimen_6"
            android:paddingTop="@dimen/define_dimen_6"
            android:text="@string/action_cancel"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/define_dimen_12"
            android:layout_marginStart="@dimen/define_dimen_26"
            android:paddingBottom="@dimen/define_dimen_6"
            android:paddingTop="@dimen/define_dimen_6"
            android:text="@string/action_reload"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/define_dimen_6"
            android:paddingEnd="@dimen/define_dimen_12"
            android:paddingStart="@dimen/define_dimen_12"
            android:paddingTop="@dimen/define_dimen_6"
            android:text="@string/action_ok"
            android:textAllCaps="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</LinearLayout>
