<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/20
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_12">

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/action_cancel"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xnormal" />

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:text="@string/message_confirm_cancel_trip"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/define_dimen_10"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:orientation="horizontal">

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_no_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_grey_corner_left_bottom"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_14"
            android:paddingTop="@dimen/define_dimen_14"
            android:text="@string/action_no"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_normal" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_yes_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_black_corner_right_bottom"
            android:gravity="center"
            android:paddingBottom="@dimen/define_dimen_14"
            android:paddingTop="@dimen/define_dimen_14"
            android:text="@string/action_yes"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</LinearLayout>
