<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginEnd="-65dp"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_16">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dividerColor" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_menu_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="@dimen/define_dimen_14"
            android:text="@string/home"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dividerColor" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_menu_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="@dimen/define_dimen_14"
            android:text="@string/my_account"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dividerColor" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_menu_my_bookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="@dimen/define_dimen_14"
            android:text="@string/my_bookings"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dividerColor" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_menu_get_in_touch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="@dimen/define_dimen_14"
            android:text="@string/get_in_touch"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dividerColor" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_menu_term_and_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="@dimen/define_dimen_14"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dividerColor" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_social_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:padding="@dimen/define_dimen_14"
            android:text="@string/social_links"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dividerColor" />

        <com.user.etow.ui.widget.textview.TahomaRegularTextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/define_dimen_20"
            android:gravity="center"
            android:padding="@dimen/define_dimen_14"
            android:text="@string/logout"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_xnormal" />
    </LinearLayout>

</LinearLayout>
