<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/20
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_14">

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/thank_you"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xnormal" />

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:gravity="center"
        android:text="@string/thank_you_for_using_our_service"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/text_size_normal" />

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/define_dimen_10"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:background="@drawable/bg_black_corner"
        android:gravity="center"
        android:paddingBottom="@dimen/define_dimen_14"
        android:paddingTop="@dimen/define_dimen_14"
        android:text="@string/action_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>
