<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/13
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_14">

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/define_dimen_30"
        android:text="@string/have_sent_sms"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xnormal" />

    <EditText
        android:id="@+id/edt_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:background="@color/white"
        android:gravity="center"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:hint="@string/enter_otp_code"
        android:padding="@dimen/define_dimen_10"
        android:textColor="@color/textColorPrimary"
        android:textColorHint="@color/textColorSecondary"
        android:textSize="@dimen/text_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/dividerColor" />

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:id="@+id/tv_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_30"
        android:background="@drawable/bg_grey_corner"
        android:gravity="center"
        android:paddingBottom="@dimen/define_dimen_14"
        android:paddingTop="@dimen/define_dimen_14"
        android:text="@string/action_done"
        android:textColor="@color/textColorAccent"
        android:textSize="@dimen/text_size_normal" />

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:id="@+id/tv_not_get_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:gravity="center"
        android:paddingBottom="@dimen/define_dimen_6"
        android:paddingTop="@dimen/define_dimen_6"
        android:text="@string/did_not_get_the_code"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/text_size_small" />
</LinearLayout>
