<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ * Copyright Ⓒ 2018. All rights reserved
  ~ * Author DangTin. Create on 2018/05/20
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_12">

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/please_wait"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xnormal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:src="@drawable/ic_booking_waiting_black" />

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/define_dimen_10"
        android:text="@string/please_wait_driver"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/text_size_normal" />

    <com.user.etow.ui.widget.textview.TahomaRegularTextView
        android:id="@+id/tv_cancel_wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/define_dimen_10"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:background="@drawable/bg_white_corner_border_grey"
        android:gravity="center"
        android:paddingBottom="@dimen/define_dimen_14"
        android:paddingTop="@dimen/define_dimen_14"
        android:text="@string/action_cancel"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>
